[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"]}
bytes = "1"
mini-redis = "0.4"
tokio-util = { version = "0.7.10", features = ["full"]}
futures = "0.3.30"
