[package]
name = "mqttserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
mini-redis = "0.4"
tokio-util = { version = "0.7.10", features = ["full"]}
futures = "0.3.30"
tokio-rustls = {version = "0.25.0"}
rustls = { version = "0.22", default-features = false }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2"
clap = "2"

[dev-dependencies]
paho-mqtt = "0.12.3"
assert_cmd = "2.0"
predicates = "2.1"