[package]
name = "mqttserver"
default-run = "mqtt-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mqtt-server"
path = "src/main.rs"

[[bin]]
name = "tarf"
path = "src/tarf.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tokio-util = { version = "0.7.10", features = ["full"]}
futures = "0.3.30"
tokio-rustls = {version = "0.25.0"}
rustls = { version = "0.22", default-features = false }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2"
clap = "2"
cdrs-tokio = "6.0.0"
chrono = "0.4.34"
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"
async-channel = "2"
rand = "0.8"
itertools = "0.12.1"


[dev-dependencies]
paho-mqtt = "0.12.3"
assert_cmd = "2.0"
predicates = "2.1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
